# cinny-click-packaging

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  cinny.apparmor  cinny.desktop.in  clickable.yaml  cmake_install.cmake  content-hub.json  main.cpp  manifest.json  manifest.json.in  prebuild.sh  url-dispatcher.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
libs/: CMakeLists.txt
libs/qhttp/: CMakeLists.txt
patches/: 0001-Fix-icons-on-high-DPI-scaling.patch  0001-Fix-loading-on-older-browsers.patch  0002-Fix-icon-colors.patch  0004-Create-data-url-instead-of-object-url.patch  0005-Implement-WebChannel-for-qml-communication.patch  0006-Download-media-using-qml-backend.patch  0007-Signal-theme-change-to-qml.patch  0008-Set-push-notifications-to-UTs-push-hook.patch  0009--Add-credits.patch  0010-Open-SSO-login-in-a-new-window.patch  0011-Remove-unused-elements.patch  0012-Rename-session-name-to-Cinny-Ubuntu-Touch.patch  0013-Disable-cinny-s-notification-sound.patch
plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
plugins/Backend/: CMakeLists.txt  Makefile  backend.cpp  backend.h  cmake_install.cmake  plugin.cpp  plugin.h  qmldir
po/: Makefile  cinny.nitanmarcel.pot  cinny.yourname.pot  cmake_install.cmake
push/: CMakeLists.txt  i18n.h  push-apparmor.json  push.cpp  push.json
qml/: DownloadPage.qml  Main.qml  UploadPage.qml  qml.qrc.depends
